--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -17,7 +17,7 @@
     height: 60vh;
     width: 60vh;
     background-color:$white;
-    box-shadow: 0 0 10px $dgray;
+    box-shadow: 0 5px 10px $dgray;
     &--name{
       font-size: 30px;
       position: absolute;
@@ -47,7 +47,7 @@
       z-index: 1;
     background-color: $white;
     border-radius: 15px;
-    box-shadow: 0 0 10px $dgray;
+    box-shadow: 0 5px 10px $dgray;
     height: 15vh;
     width: 25vw;
     line-height: 15vh;
@@ -56,7 +56,7 @@
 // main------------------------------------------------
 &__main{
   background-color: $white;
-  box-shadow: 0 0 10px $dgray;
+  box-shadow: 0 5px 10px $dgray;
   border-radius: 20px;
   width: 100%;
   padding: 7vh;
@@ -130,7 +130,7 @@
       cursor: pointer;
       transition-duration: 0.5s;
       background-color: $white;
-      box-shadow: 0 0 10px $dgray;
+      box-shadow: 0 5px 10px $dgray;
       border-radius: 15px;
       height: 25vh;
       width: 25vh;
