--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -85,6 +85,9 @@
     width: 100%;
     height: 70vh;
     position: relative;
+    @media(max-width: 560px){
+      height: 90vh;
+    }
     &__imageWrapper{
       position: absolute;
         left: 50%;
@@ -94,6 +97,10 @@
       border-radius: 50%;
       height: 30vh;
       width: 30vh;
+      @media (max-width:560px) {
+        width: 20vh;
+        height: 20vh;
+      }
       img{
         @include position-center;
         border-radius: 50%;
@@ -111,6 +118,9 @@
       position: absolute;
         top: 50%;
         transform: translateY(-50%);
+      @media (max-width:560px){
+        top: 20vh;
+      }
       i{
         @include position-center;
         color: $black;
@@ -128,12 +138,19 @@
       position: absolute;
         top: 35%;
         left: 13%;
-      width: 80%;
       height: 8vh;
       line-height: 8vh;
+      @media (max-width:560px){
+        top: 25vh;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
       li{
         display: none;
         @include h2;
+        @media (max-width:560px){
+          @include s-h2;
+        }
       }
     }
 // contents------------------------------------------------
@@ -144,12 +161,15 @@
         transform: translateX(-50%)translateY(-50%);
       width: 70%;
       height: 30vh;
+      @media(max-width: 560px){
+        top: 48%;
+        width: 100%;
+      }
       &__wrapper{
         display: none;
         position: relative;
         width: 100%;
         height: 100%;
-        font-family: "roboto";
         &__introduceA1,&__introduceA2,&__introduceB1,&__introduceB2,&__introduceB3{
           position: absolute;
             top: 50%;
@@ -187,6 +207,27 @@
         &__introduceB3{
           left: 85%;
         }
+        @media (max-width:560px){
+          &__introduceA1,&__introduceA2,&__introduceB1,&__introduceB2,&__introduceB3{
+            left: 50%;
+            width: 90%;
+            text-align: center;
+          }
+          &__introduceA2{
+            top: 40vh;
+          }
+          &__introduceB1,&__introduceB2,&__introduceB3{
+            &--text{
+              margin-top: 0;
+            }
+          }
+          &__introduceB2{
+            top: 34vh;
+          }
+          &__introduceB3{
+            top: 53vh;
+          }
+        }
       }
     }
 // circles------------------------------------------------
@@ -200,6 +241,9 @@
       display: flex;
         justify-content: space-around;
         align-items: center;
+      @media(max-width:560px){
+        height: 5vh;
+      }
       &--circle{
         border-radius: 50%;
         height: 1vh;
