--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -119,7 +119,7 @@
         top: 50%;
         transform: translateY(-50%);
       @media (max-width:560px){
-        top: 20vh;
+        top: 13vh;
       }
       i{
         @include position-center;
@@ -290,6 +290,9 @@
     width: 100%;
     height: 65vh;
     position: relative;
+    @media (max-width:560px){
+      height: 90vh;
+    }
     &--message{
       text-align: center;
       position: absolute;
@@ -298,6 +301,10 @@
         transform: translateY(-50%)translateX(-50%);
       height:5vh;
       line-height: 5vh;
+      @media (max-width:560px){
+        bottom: 0;
+        left: 50%;
+      }
     }
 // upper------------------------------------------------
     &__upperBlock{
@@ -310,10 +317,21 @@
       overflow-x: scroll;
       overflow-y: hidden;
       white-space: nowrap;
+      @media(max-width:560px){
+        overflow-x: hidden;
+        overflow-y: scroll;
+        height: 60vh;
+        top: 10%;
+      }
       &__contentBox{
         display: inline-block;
         cursor: pointer;
         width: 12vw;
+        @media (max-width:560px){
+          display: flex;
+          align-items: center;
+          width: 80vw;
+        }
         &--icon{
           background-color: $dgray;
           border-radius: 50%;
@@ -326,6 +344,12 @@
             @include position-center;
             width: 20%;
             fill: $white;
+          }
+          @media(max-width:560px){
+            margin:1vh;
+            .svgIcon{
+              width: 50%;
+            }
           }
         }
         &--name{
@@ -345,6 +369,13 @@
       border-radius:15px;
       background-color:$red;
       box-shadow: 0 5px 10px $dgray;
+      @media (max-width:560px){
+        max-height: 30vh;
+        width: 80vw;
+        z-index: 1;
+        top:75%;
+        left: 150%;
+      }
       &--name{
         margin: 2vh 0 0 2vh;
         height: 5vh;
@@ -410,9 +441,15 @@
             height: 7vh;
             width: 18vw;
             background-color: $white;
+            @media (max-width:560px){
+              width: 7vh;
+            }
             &--text{
               line-height: 7vh;
               margin-left: 1.5vw;
+              @media (max-width:560px){
+                display: none;
+              }
             }
             &--icon{
               position: absolute;
@@ -439,6 +476,11 @@
         bottom: 10%;
         left: 15%;
       width:20%;
+      @media(max-width:560px){
+        width: 70%;
+        left: 15%;
+        bottom: 5%;
+      }
       &--heading{
         line-height: 6vh;
       }
